--- a/htmlCode.html
+++ b/htmlCode.html
@@ -9,6 +9,10 @@
 <body>
     <h1> WELCOME TO ORANGE JUICE </h1>
     <p> Greetings, friends. This is a webpage dedicated to orange juice. Enjoy your stay.  </p>
+    <br>
+    <p> This link is completely unrelated to orange juice, but it's still important: 
+    <a href="https://www.youtube.com/watch?v=bXlLcyigb00"> link time </a>
+    </p>
     <img src="orange.jpg"
 </body>
 
