--- a/htmlCode.html
+++ b/htmlCode.html
@@ -2,18 +2,27 @@
 
 <html>
 
+
 <head>
     <title>Orange Juice</title>
+    <link rel="stylesheet" href="cssCode.css" />
 </head>
 
 <body>
     <h1> WELCOME TO ORANGE JUICE </h1>
-    <p> Greetings, friends. This is a webpage dedicated to orange juice. Enjoy your stay.  </p>
+   
+    <p1> Greetings, friends. This is a webpage dedicated to orange juice. Enjoy your stay.  </p1>
     <br>
-    <p> This link is completely unrelated to orange juice, but it's still important: 
+    
+    <p2> This link is completely unrelated to orange juice, but it's still important: 
     <a href="https://www.youtube.com/watch?v=bXlLcyigb00"> link time </a>
-    </p>
-    <img src="orange.jpg"
+    <br>
+    <br>
+    </p2>
+    
+    <p3>
+        <img src="orange.jpg"
+        </p3>
 </body>
 
 </html>
