--- a/htmlCode.html
+++ b/htmlCode.html
@@ -9,9 +9,22 @@
 </head>
 
 <body>
-    <h1> WELCOME TO ORANGE JUICE </h1>
+    <header>
+        <div class="main">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Poopoo</a></li>
+                <li><a href="#">Orangay</a></li>
+                <li><a href="#">AwayHaha</a></li>
+            </ul>
+        </div>
+        <div class="title">
+            <h1>OPPA GANGNAM STYLE</h1>
+        </div>
+    </header>
    
-    <p1> Greetings, friends. This is a webpage dedicated to orange juice. Enjoy your stay.  </p1>
+    <p1> Greetings, friends. This is a webpage that has 
+    nothing to do with orange juice. <br/> Enjoy your stay.  </p1>
     <br>
     
     <p2> This link is completely unrelated to orange juice, but it's still important: 
