--- a/htmlCode.html
+++ b/htmlCode.html
@@ -13,9 +13,9 @@
         <div class="main">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Poopoo</a></li>
-                <li><a href="#">Orangay</a></li>
-                <li><a href="#">AwayHaha</a></li>
+                <li><a href="#">Psy History</a></li>
+                <li><a href="#">Learn Gangnam Style</a></li>
+                <li><a href="#">Orange Juice</a></li>
             </ul>
         </div>
         <div class="title">
