--- a/htmlCode.html
+++ b/htmlCode.html
@@ -5,22 +5,43 @@
 
 <head>
     <title>Orange Juice</title>
+    
     <link rel="stylesheet" href="cssCode.css" />
+
 </head>
 
 <body>
     <header>
-        <div class="main">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Psy History</a></li>
-                <li><a href="#">Learn Gangnam Style</a></li>
-                <li><a href="#">Orange Juice</a></li>
+        <div class="container">
+            <ul class="tabs">
+                <li><a href="tab1">Home</a></li>
+                <li><a href="tab2">Psy History</a></li>
+                <li><a href="tab3">Learn Gangnam Style</a></li>
+                <li><a href="tab4">Orange Juice</a></li>
+            </ul>
+            <ul class="tab-contents">
+                <li id="tab1" class="visible">
+                    <p>This is a button to take you home, country roads. Haha, get it? That was a reference to John Denver's "Take Me Home, Country Roads" </p>
+                </li>
+                <li id="tab2">
+                    <p>
+                        PSY is an ancient Korean God that brought peace to the Universe in the year 2013, when he released the masterpiece
+                        "Gangnam Style". This song went on to defeat the menace, Justin Bieber's "Baby" by overtaking his music video in views.
+                    </p>
+                    <link id="tab3">
+                    <p>
+                        <a href="https://youtu.be/_LWpXRXl12I"> </a>
+                    </p>
+                    <link id="tab4">
+                    <p> Idk, I just like drinking orange juice.</p>
+                </li>
             </ul>
         </div>
+        <script src="java.js"></script>
         <div class="title">
             <h1>OPPA GANGNAM STYLE</h1>
         </div>
+
     </header>
    
     <p1> Greetings, friends. This is a webpage that has 
