spacing and tab fixes

--- a/htmlCode.html
+++ b/htmlCode.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>JavaScript for Web Designers - Simple tabs demo</title>
-
     <link rel="stylesheet" href="cssCode.css">
 </head>
 <body>
@@ -17,36 +14,27 @@
             <ul class="tab-contents">
                 <li id="tab-1" class="visible">
                     <p>This is a button to take you home, country roads. Haha, get it? That was a reference to John Denver's "Take Me Home, Country Roads"</p>
-
-
                 </li>
                 <li id="tab-2">
                     <p>
                         PSY is an ancient Korean God that brought peace to the Universe in the year 2013, when he released the masterpiece
                         "Gangnam Style". This song went on to defeat the menace, Justin Bieber's "Baby" by overtaking his music video in views.
                     </p>
-
                 </li>
                 <li id="tab-3">
                     <p>
                         I'm gonna put a link here that will teach you PSY's legendary war dance called Gangnam Style, once I figure out how
                     </p>
-
                 </li>
             </ul>
         </div> 
-
         <script src="java.js"></script>
-
         <div class="title">
             <h1>OPPA GANGNAM STYLE</h1>
         </div>
     </header>
 </body>
 </html>
-
-
-
 <!--  <p1> Greetings, friends. This is a webpage that has
     nothing to do with orange juice. <br/> Enjoy your stay.  </p1>
     <br>
