--- a/htmlCode.html
+++ b/htmlCode.html
@@ -4,6 +4,34 @@
     <link rel="stylesheet" href="cssCode.css">
 </head>
 <body>
+    <script type= "text/javascript">
+        let psy = `[
+  {
+    "name": "Psy",
+    "speed": "1000mph",
+    "ability power": "Unlimited",
+    "secret move": "Gangnam Style"
+  },
+  {
+    "name": "Justin Bieber",
+    "speed": "very slow",
+    "ability power": "1",
+    "secret move":  "sing bad"
+    
+  }
+
+]`
+        console.log(JSON.parse(psy))
+
+        var dog = {
+            name: 'woof',
+            age: 100,
+            color: 'white'
+                 }
+        let dogstring = JSON.stringify(dog)
+        console.log(dogstring)
+
+    </script>
     <header>
         <div class="container">
             <ul class="tabs">
@@ -33,6 +61,7 @@
             <h1>OPPA GANGNAM STYLE</h1>
         </div>
     </header>
+   
 </body>
 </html>
 <!--  <p1> Greetings, friends. This is a webpage that has
